# FastAPIi18n

./: .replit  README.md  main.py  pyproject.toml  replit.md  requirements.txt
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/es/LC_MESSAGES/: messages.mo  messages.po
locales/fr/LC_MESSAGES/: messages.mo  messages.po
translations/: en.json  es.json  fr.json
