[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "babel>=2.17.0",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "python-i18n[yaml]>=0.3.9",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]
